# la93xx_freertos

./: .gitignore  SCR.txt
Demo/CORTEX_M4_NXP_LA9310_GCC/: CMakeLists.txt  LICENSE  armgcc.cmake  bbdev_ipc_raw_demo.c  build_release.sh  clean.sh  dfe_app.c  dfe_avi.c  la9310_demo.c  la9310_irq.c  la9310_v2h_test.c  main.c  rfnm_rf_ctrl.c  sdr_rf_ctrl.c  tti_gpio12_test.c
Demo/CORTEX_M4_NXP_LA9310_GCC/docs/: Doxyfile  DoxygenLayout.xml  README_I2C_BOOT.txt  generate_doc.sh  mainpage.md  readme.txt
Demo/CORTEX_M4_NXP_LA9310_GCC/docs/help_template/: html_custom.css  html_footer.html
Demo/CORTEX_M4_NXP_LA9310_GCC/drivers/avi/: la9310_avi.c  la9310_avi_ds.h  la9310_vspa_dma.c  la9310_vspa_dma.h
Demo/CORTEX_M4_NXP_LA9310_GCC/drivers/dcs/: la9310_dcs.c  la9310_dcs.h
Demo/CORTEX_M4_NXP_LA9310_GCC/drivers/dspi/: dspi_test.c  dspi_test.h  fsl_dspi.c
Demo/CORTEX_M4_NXP_LA9310_GCC/drivers/edma/: la9310_edma.c  la9310_edma.h
Demo/CORTEX_M4_NXP_LA9310_GCC/drivers/i2c/: la9310_i2c.c  la9310_i2c.h
Demo/CORTEX_M4_NXP_LA9310_GCC/drivers/llcp/: llcp_api.c  llcp_api.h
Demo/CORTEX_M4_NXP_LA9310_GCC/drivers/misc/: bbdev_ipc.c  la9310_gpio.c  la9310_pinmux.c  la9310_pinmux.h  mem_log.c
Demo/CORTEX_M4_NXP_LA9310_GCC/drivers/pcie/: la9310_pcie.c
Demo/CORTEX_M4_NXP_LA9310_GCC/drivers/phy_timer/: phytimer.c  phytimer.h
Demo/CORTEX_M4_NXP_LA9310_GCC/drivers/rfic/: rfic_api.c  rfic_api.h  rfic_avi_ctrl.c  rfic_avi_ctrl.h  rfic_cmd.c  rfic_cmd.h  rfic_core.c  rfic_core.h  rfic_dac.c  rfic_dac.h  rfic_demod.c  rfic_demod.h  rfic_init.c  rfic_lmx2582_synth.c  rfic_lmx2582_synth.h  rfic_max2870_synth.c  rfic_max2870_synth.h  rfic_synth.c  rfic_synth.h  rfic_vga.c  rfic_vga.h
Demo/CORTEX_M4_NXP_LA9310_GCC/drivers/serial/: debug_console.c  nmm_logging.c  print_scan.c  print_scan.h  serial_ns16550.c  serial_ns16550.h
Demo/CORTEX_M4_NXP_LA9310_GCC/drivers/timesync/: sync_timing_aruba_cmd.h  sync_timing_aruba_cmd_map.h  sync_timing_common.h  sync_timing_core_aruba_interface.h  sync_timing_device.c  sync_timing_device.h  sync_timing_device_cli.c  sync_timing_device_cli.h
Demo/CORTEX_M4_NXP_LA9310_GCC/drivers/watchdog/: la9310_watchdog.c  la9310_watchdog.h
Demo/CORTEX_M4_NXP_LA9310_GCC/include/: bbdev_ipc.h  bit.h  common.h  debug_console.h  dfe_app.h  dfe_avi.h  dfe_vspa_mbox.h  fsl_dspi.h  io.h  la9310.h  la9310_avi.h  la9310_boot_mode.h  la9310_dcs_api.h  la9310_demo.h  la9310_edmaAPI.h  la9310_error_codes.h  la9310_gpio.h  la9310_i2cAPI.h  la9310_irq.h  la9310_main.h  la9310_pci.h  la9310_v2h_test.h  la9310_wdogAPI.h  nmm_logging.h  rfnm_rf_ctrl.h  sdr_rf_ctrl.h  types.h
Demo/CORTEX_M4_NXP_LA9310_GCC/platform/ARM_CM4/: exceptions.c  la9310.ld  la9310_host_pcie_mode.ld  la9310_standalone_i2c_mode.ld  soc.c  start.S
Demo/CORTEX_M4_NXP_LA9310_GCC/platform/ARM_CM4/include/: config.h  core_cm4.h  exceptions.h  immap.h  soc.h
Demo/CORTEX_M4_NXP_LA9310_GCC/platform/boards/la9310/: FreeRTOSConfig.h  board.c  board.h  hardware_init.c
Demo/CORTEX_M4_NXP_LA9310_GCC/sw_cmd_engine/: sw_cmd_engine.c  sw_cmd_engine.h
Demo/CORTEX_M4_NXP_LA9310_GCC/utils/: UARTCommandConsole.c  UARTCommandConsole.h  create_i2c_image.sh  delay.c  delay.h  la9310_dfe_test_command.c  la9310_nlm_test_command.c  task_stats.c  task_stats.h
Demo/CORTEX_M4_NXP_LA9310_GCC/utils/FreeRTOS-Plus-CLI-Source/: FreeRTOS_CLI.c  FreeRTOS_CLI.h
Demo/Common/ethernet/lwIP/core/snmp/: msg_out.c
Demo/Common/ethernet/lwIP/include/lwip/: snmp_msg.h
Demo/Common/ethernet/lwIP_130/src/core/snmp/: msg_out.c
Demo/Common/ethernet/lwIP_130/src/include/lwip/: snmp_msg.h
Demo/Common/ethernet/lwIP_132/src/include/lwip/: snmp_msg.h
Demo/Common/ethernet/lwip-1.4.0/src/core/snmp/: msg_out.c
Demo/Common/ethernet/lwip-1.4.0/src/include/lwip/: snmp_msg.h
FreeRTOS-Kernel/: manifest.yml  tasks.c
FreeRTOS-Kernel/include/: FreeRTOS.h  portable.h  task.h
FreeRTOS-Kernel/portable/GCC/ARM_CM4/: port.c  portmacro.h
License/: COPYING
Source/include/: FreeRTOS.h
Source/portable/GCC/ARM_CM4/: port.c  portmacro.h
common_headers/: dfe_host_if.h  la9310_host_if.h  la9310_modinfo.h  la9310_pci_def.h  la9310_tti_ioctl.h  la9310_v2h_if.h  la9310_wdog_ioctl.h  la93xx_ipc_ioctl.h  rfic_hif.h  rfic_sw_cmd.h
standalone_utils/: ReadMe.txt
standalone_utils/boot_strapper/: Makefile  README
standalone_utils/boot_strapper/common/: boot_strapper.c  log.c  utils.c
standalone_utils/boot_strapper/core/: boot_strapper.lds  start.S
standalone_utils/boot_strapper/i2c/: i2c.c  i2c.h
standalone_utils/boot_strapper/include/: common.h  config.h  error_codes.h  immap.h  io.h  log.h  platform.h  types.h  utils.h
standalone_utils/firmware/: DN_Binary_Firmware_License_Agreement  apm.eld  apm_vspa_iq_dump.eld  memory_calc.py  standalone_image_generator.sh
